--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-amqp==5.3.1
+aamqp==5.3.1
 asgiref==3.9.1
 billiard==4.2.1
 celery==5.5.3
@@ -38,3 +38,9 @@ tzdata==2025.2
 urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.13
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+dj-database-url==2.1.0
+whitenoise==6.6.0
+celery==5.3.6
+redis==5.0.1
