Рефакторинг после восстановления БД
- Обновлены модели событий (добавлены is_free, tickets_available)
- Добавлена система корзины и заказов
- Реализована система тегов и уровней сложности событий
- Добавлена аутентификация и регистрация
- Обновлены шаблоны и стили
- Добавлена система уведомлений
- Удалены конфликтующие миграции
- Добавлены тесты

Новые функции:
- Корзина покупок
- Избранные события
- Система заказов и платежей
- Тегирование событий
- Система сложности мероприятий

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,14 @@ __pycache__/
 # для игнора .env
 .env
 *.env
+
+echo "__pycache__/" >> .gitignore
+echo "*.pyc" >> .gitignore
+echo "*.pyo" >> .gitignore
+echo "*.pyd" >> .gitignore
+echo "db.sqlite3" >> .gitignore
+echo ".Python" >> .gitignore
+echo "env/" >> .gitignore
+echo "venv/" >> .gitignore
+echo ".env" >> .gitignore
+echo ".vscode/" >> .gitignore
