Добавлена статистика платформы и система заметок
Новые функции:
- Модель PlatformStatistic для отслеживания метрик платформы
- Поле notes в регистрациях для заметок организаторов
- Обновлены API endpoints для событий
- Добавлена локализация (locale/)
- Улучшена система рейтингов событий
- Обновлены шаблоны email подтверждений
- Добавлены/обновлены шаблоны корзины и оплаты
- Улучшена система категорий событий

Миграции:
- 0006: Добавлена статистика платформы, обновлены рейтинги
- 0007: Заметки к регистрациям, настройки категорий

--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,4 @@ echo ".Python" >> .gitignore
 echo "env/" >> .gitignore
 echo "venv/" >> .gitignore
 echo ".env" >> .gitignore
-echo ".vscode/" >> .gitignore
+echo ".vscode/" >> .gitignoredb.sqlite3
