feat: Рабочая версия карты мероприятий
- Добавлена интерактивная карта мероприятий с Яндекс.Картами
- Реализованы расширенные фильтры (радиус, рейтинг, участники)
- Исправлены ошибки моделей и представлений
- Добавлена мини-карта на главную страницу
- Интегрирована система рекламных баннеров
- Улучшена навигация и пользовательский интерфейс

Функциональность:
✅ Карта с кластеризацией маркеров
✅ Фильтры по радиусу, рейтингу, участникам
✅ Геолокация пользователя
✅ Тепловая карта мероприятий
✅ API для карты мероприятий
✅ Адаптивный дизайн

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-SECRET_KEY=your-secret-key-here
 DEBUG=True
+SECRET_KEY=ваш-secret-key-здесь
+YANDEX_MAPS_API_KEY=68350a7a-73c2-438e-a7d0-5c6542ce05c9
