Fix: Configuration and URL routing
- Fixed TemplateDoesNotExist error for events/base.html
- Removed urlpatterns from settings.py (moved to urls.py)
- Added media serving configuration in urls.py
- Fixed NoReverseMatch for 'profile' URL
- Updated project settings and middleware

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,12 @@ echo "venv/" >> .gitignore
 echo ".env" >> .gitignore
 echo ".vscode/" >> .gitignoredb.sqlite3
 db.sqlite3
+.env
+db.sqlite3
+__pycache__/
+*.pyc
+*.log
+.DS_Store
+.venv/
+venv/
+.env.local
